Post-merge cleanup